# django-multifactor

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: autopublish.yml  docs.yml  main.yml
design/: package-lock.json  package.json  postcss.config.js  vite.config.js  webpack.config.js
design/src/: _variables.scss  all-layouts.html  index.js  multifactor.js  multifactor.scss
docs/: Makefile  changelog.md  conf.py  index.md  requirements.txt
docs/_static/: custom.css
docs/concepts/: architecture.md  auth-flow.md  factors-overview.md  session-model.md
docs/contributing/: coding-standards.md  development-setup.md  release-process.md  running-tests.md  translations.md
docs/debugging/: common-issues.md  fido2-troubleshooting.md  logging.md  session-debugging.md  testsite.md  totp-troubleshooting.md
docs/getting-started/: configuration.md  first-protected-view.md  installation.md  quickstart.md
docs/guides/: admin-integration.md  branding.md  conditional-bypass.md  custom-fallback.md  fido2.md  i18n.md  mixins.md  protecting-views.md  totp.md  upgrading.md
docs/reference/: common.md  decorators.md  mixins.md  models.md  settings.md  templates.md  urls.md
docs/security/: best-practices.md  disclosure.md  fallback-risks.md  recheck-tuning.md  threat-model.md
multifactor/: __init__.py  admin.py  app_settings.py  apps.py  common.py  decorators.py  helpers.py  mixins.py  models.py  urls.py  views.py
multifactor/factors/: email.py  fallback.py  fido2.py  singlefactor_fido2.py  totp.py  u2f.py
multifactor/locale/en/LC_MESSAGES/: django.mo  django.po
multifactor/locale/pt_BR/LC_MESSAGES/: django.mo  django.po
multifactor/migrations/: 0001_initial.py  0001_squashed_0005_auto_20190823_0001.py  0002_auto_20190823_2128.py  0003_userkey_name.py  0004_alter_userkey_key_type.py
multifactor/static/multifactor/: multifactor.css  multifactor.js
multifactor/static/multifactor/css/: multifactor-main.bundle.css  sb-admin.min.css
multifactor/static/multifactor/js/: cbor.min.js  multifactor.bundle.js  multifactor.bundle.js.map  multifactor.js  u2f-api.min.js  webauthn-json.browser-ponyfill.js
multifactor/templates/multifactor/: add.html  authenticate.html  base.html  help.html  home.html  mfa_check.html  modal.html  userkey_form.html  verify.html
multifactor/templates/multifactor/Email/: add.html  check.html  email_body.txt  email_token_template.html
multifactor/templates/multifactor/FIDO2/: add.html  check.html  singlefactor_login.html
multifactor/templates/multifactor/TOTP/: add.html  check.html
multifactor/templates/multifactor/U2F/: add.html  check.html
multifactor/templates/multifactor/fallback/: auth.html  email.html
tests/: test___init__.py  test_admin.py  test_app_settings.py  test_common.py  test_decorators.py  test_mixins.py  test_models.py  test_urls.py  test_views.py
tests/factors/: test_fallback.py  test_fido2.py  test_totp.py
testsite/: manage.py  requirements.txt
testsite/testsite/: disable_csrf.py  settings.py  urls.py
