[tool.poetry]
name = "django-multifactor"
version = "0.0.0"
description = "Drop-in multifactor authentication subsystem for Django."
authors = ["Oli Warner <oli@thepcspy.com>"]
repository = "https://github.com/oliwarner/django-multifactor"
homepage = "https://github.com/oliwarner/django-multifactor"
readme = 'README.md'
license = "MIT"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    { include="multifactor", from="." },
]
include = [
    'multifactor/templates/**',
    'multifactor/static/**',
]

[tool.poetry.dependencies]
python = ">=3.8, <4.0"
Django = [
    { version = ">=4.2,<7", python = ">=3.10" },
    { version = ">2.2,<6", python = "<3.10" }
]
pyotp = "^2.9"
fido2 = [
    { version = ">=2.0.0", python = ">=3.10" },
    { version = ">=1.2.0,<1.3", python = "<3.10" }
]


[tool.poetry.dev-dependencies]
pytest = ">=7,<10"
pytest-cov = ">4,<8"

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_tests.py", "tests.py"]
addopts = "--cov=multifactor --cov-report=term-missing --cov-report=xml"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[[tool.poetry.source]]
name = "pypi-public"
url = "https://pypi.org/simple/"

# NEW
[tool.coverage.run]
branch = true
parallel = true
source = ["multifactor"]

[tool.coverage.paths]
source = [
    "multifactor",
    ".tox/*/lib/python*/site-packages/multifactor",
    ".tox/*/site-packages/multifactor",
]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry-core>=1.7.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"