[tool.poetry]
name = "django-multifactor"
version = "0.0.0"
description = "Drop-in multifactor authentication subsystem for Django."
authors = ["Oli Warner <oli@thepcspy.com>"]
repository = "https://github.com/oliwarner/django-multifactor"
homepage = "https://github.com/oliwarner/django-multifactor"
readme = 'README.md'
license = "MIT"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    { include="multifactor", from="." },
]
include = [
    'multifactor/templates/**',
    'multifactor/static/**',
    'multifactor/locale/**/*.po',
    'multifactor/locale/**/*.mo',
]

[tool.poetry.dependencies]
python = ">=3.10, <4.0"
Django = ">=5.2,<7"
pyotp = "^2.9"
fido2 = ">=2.2.0"
cryptography = ">=46.0.7,<49"

[tool.poetry.group.dev.dependencies]
pytest = ">=7,<10"
pytest-cov = ">4,<8"

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_tests.py", "tests.py"]
# addopts = "--cov=multifactor --cov-report=term-missing --cov-report=xml"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[[tool.poetry.source]]
name = "pypi-public"
url = "https://pypi.org/simple/"

[tool.coverage.run]
branch = true
parallel = true
relative_files = true
source = ["multifactor"]

[tool.coverage.paths]
source = [
    "multifactor",
    ".tox/*/lib/python*/site-packages/multifactor",
    ".tox/*/site-packages/multifactor",
]

[tool.coverage.report]
show_missing = true

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.7.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"